[package]
name        = "flywheel-sys"
version     = "0.1.0"
authors     = ["FlywheelMC <https://github.com/FlywheelMC>"]
description = "Rust bindings to the FlywheelMC WASM API"
license     = "LGPL-3.0-only"

readme     = "README.md"
homepage   = "https://github.com/FlywheelMC"
repository = "https://github.com/FlywheelMC/flywheel-sys-rust"
publish    = false

keywords   = [ "flywheel", "mc", "minecraft", "game" ]
categories = [ ]

edition      = "2024"
rust-version = "1.89"


[features]
selfhosted = [ ]
unstable   = [ ]
chrono     = [ "dep:chrono" ]


[lints.rust]
unused_parens = "allow"
missing_docs  = "forbid"


[dependencies.wasm-rs-async-executor]
version = "0.9"
[dependencies.pin-project]
version = "1.1"

[dependencies.uuid]
version = "1.16"

[dependencies.chrono]
version          = "0.4"
default-features = false
features         = [ "clock", "oldtime", "std" ]
optional         = true
